According To Update the log
Former-commit-id: 9cc87f96ccc711558d8693e569d889c6acc1eae5

--- a/UnionSquare.iOS/ELA/MeVC/AboutELAWalletViewController.xib
+++ b/UnionSquare.iOS/ELA/MeVC/AboutELAWalletViewController.xib
@@ -45,7 +45,7 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avu-Ok-fmF">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avu-Ok-fmF">
                     <rect key="frame" x="63" y="425.33333333333331" width="288" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="ubt-sr-MVF"/>
