--- a/UnionSquare.iOS/ELA/Wallet/assetDetails/ViewController/HWMSignatureTradingSingleQrCodeViewController.xib
+++ b/UnionSquare.iOS/ELA/Wallet/assetDetails/ViewController/HWMSignatureTradingSingleQrCodeViewController.xib
@@ -27,23 +27,23 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="asset_code_border" translatesAutoresizingMaskIntoConstraints="NO" id="4ck-VD-qaZ">
-                    <rect key="frame" x="82" y="119" width="250" height="250"/>
+                    <rect key="frame" x="77" y="119" width="260" height="260"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="250" id="2Em-92-F2D"/>
-                        <constraint firstAttribute="height" constant="250" id="8ab-NC-PVY"/>
+                        <constraint firstAttribute="width" constant="260" id="2Em-92-F2D"/>
+                        <constraint firstAttribute="height" constant="260" id="8ab-NC-PVY"/>
                     </constraints>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yWy-sl-6lq">
-                    <rect key="frame" x="87" y="124" width="240" height="240"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="87" y="129" width="240" height="240"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="240" id="aUl-Jf-NBj"/>
                         <constraint firstAttribute="height" constant="240" id="ckt-bE-dAk"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3hQ-I1-PWu">
-                    <rect key="frame" x="127" y="394" width="160" height="13.5"/>
+                    <rect key="frame" x="127" y="404" width="160" height="13.5"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="160" id="PUr-Hg-qYe"/>
                     </constraints>
@@ -52,7 +52,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B7k-I4-gti">
-                    <rect key="frame" x="63" y="692" width="288" height="40"/>
+                    <rect key="frame" x="63" y="742" width="288" height="40"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.14855375740000001" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="BGi-jo-axk"/>
@@ -66,12 +66,12 @@
                     </connections>
                 </button>
                 <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EzU-1m-75K">
-                    <rect key="frame" x="30" y="399" width="354" height="50"/>
+                    <rect key="frame" x="30" y="409" width="354" height="26"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9mK-WA-030">
-                            <rect key="frame" x="26" y="0.0" width="302" height="50"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9mK-WA-030">
+                            <rect key="frame" x="26" y="5" width="302" height="16"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="160" id="vrk-mF-KzI"/>
+                                <constraint firstAttribute="width" constant="250" id="vrk-mF-KzI"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -82,9 +82,8 @@
                     <constraints>
                         <constraint firstItem="9mK-WA-030" firstAttribute="leading" secondItem="N5y-z7-iIA" secondAttribute="leading" constant="26" id="Ra5-Pj-mSU"/>
                         <constraint firstItem="N5y-z7-iIA" firstAttribute="trailing" secondItem="9mK-WA-030" secondAttribute="trailing" constant="26" id="Rf8-jp-wiy"/>
-                        <constraint firstItem="N5y-z7-iIA" firstAttribute="bottom" secondItem="9mK-WA-030" secondAttribute="bottom" id="ast-7U-A2r"/>
-                        <constraint firstAttribute="height" constant="50" id="yIW-R8-xTl"/>
-                        <constraint firstItem="9mK-WA-030" firstAttribute="top" secondItem="N5y-z7-iIA" secondAttribute="top" id="yug-hM-dds"/>
+                        <constraint firstItem="N5y-z7-iIA" firstAttribute="bottom" secondItem="9mK-WA-030" secondAttribute="bottom" constant="5" id="ast-7U-A2r"/>
+                        <constraint firstItem="9mK-WA-030" firstAttribute="top" secondItem="N5y-z7-iIA" secondAttribute="top" constant="5" id="yug-hM-dds"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="N5y-z7-iIA"/>
                 </view>
@@ -95,7 +94,7 @@
                 <constraint firstItem="yWy-sl-6lq" firstAttribute="centerY" secondItem="4ck-VD-qaZ" secondAttribute="centerY" id="3GJ-ul-RsI"/>
                 <constraint firstItem="4ck-VD-qaZ" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="75" id="5hf-a7-hGy"/>
                 <constraint firstItem="EzU-1m-75K" firstAttribute="top" secondItem="4ck-VD-qaZ" secondAttribute="bottom" constant="30" id="7Ov-Lw-KaH"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="B7k-I4-gti" secondAttribute="bottom" constant="130" id="EFD-7x-pfg"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="B7k-I4-gti" secondAttribute="bottom" constant="80" id="EFD-7x-pfg"/>
                 <constraint firstItem="3hQ-I1-PWu" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="JQT-ms-z9F"/>
                 <constraint firstItem="3hQ-I1-PWu" firstAttribute="top" secondItem="4ck-VD-qaZ" secondAttribute="bottom" constant="25" id="LIC-a2-l6c"/>
                 <constraint firstItem="EzU-1m-75K" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="O3u-CR-G9n"/>
